send catalog to api views, add catalog docs to swagger
